<resources>
    <string name="app_name">MedMobile</string>
    <string name="show">Посмотреть</string>
    <string name="edit">Редактировать</string>
    <string name="OK">OK</string>
    <string name="add">Добавить</string>

    <!--LogInActivity strings-->
    <string name="login_title">Вход в систему</string>
    <string name="login_hint">Логин</string>
    <string name="password_hint">Пароль</string>
    <string name="login_button_text">Войти</string>

    <string name="empty_login_error">Введите логин</string>
    <string name="empty_password_error">Введите пароль</string>


    <!--main menu strings-->
    <string name="main_menu_directories">Справочники</string>
    <string name="main_menu_purchase">Закупки</string>
    <string name="main_menu_sales">Продажи</string>
    <string name="main_menu_sales_to_pharmacy">Продажи аптекам</string>
    <string name="main_menu_sales_by_pharmacy">Продажи аптек</string>
    <string name="main_menu_supply">Снабжение</string>
    <string name="main_menu_accounting">Отчётность</string>

    <!--add menu string-->
    <string name="add_menu_title">Добавить</string>

    <!--exit menu string-->
    <string name="exit_menu_title">Выйти</string>

    <!--Fragment label-->
    <string name="users_label">Пользователи</string>
    <string name="create_user_label">Создание пользователя</string>
    <string name="manufacturers_label">Производители лекарств</string>

    <!--Directories Activity strings-->
    <string name="remedy_producers">Производительи лекарств</string>
    <string name="remedies">Лекарства</string>
    <string name="pharmacies">Аптеки</string>
    <string name="users">Пользователи</string>


    <!--User rv item string-->
    <string name="user_login_text">Логин: %s</string>
    <string name="user_phone_text">Телефон: %d</string>
    <string name="user_role_text">Роль: %s</string>

    <!--Manufacturer rv item strings-->
    <string name="manufacturer_inn">ИНН: %s</string>
    <string name="manufacturer_address">Адрес: %s</string>
    <string name="manufacturer_phone">Телефон: %s</string>

    <!--Medicine rv item strings-->
    <string name="medicine_price">Цена: %f</string>
    <string name="medicine_creator">Произовдитель: %s</string>
    
    <!--Pharmacy rv item strings-->
    <string name="pharmacy_supervisor">Управляющий: %s</string>

    <!--MedicineRequest rv item strings-->
    <string name="medicine_request_count">Количество: %d</string>

    <!--User creation fragment strings-->
    <string name="user_login_hint">Логин</string>
    <string name="user_login_error">Логин должен быть не менее 3 символов</string>

    <string name="user_password_hint">Пароль</string>
    <string name="user_password_error">Пароль должен быть от 8 до 50 символов</string>

    <string name="user_name_hint">ФИО</string>
    <string name="user_name_error">ФИО должно быть не менее 3 символов</string>

    <string name="user_role_hint">Роль</string>
    <string name="user_role_error">Нужно выбрать роль</string>

    <string name="user_phone_hint">Телефон</string>
    <string name="user_phone_error">Введите телефон</string>

    <string name="create_user_button">Создать пользователя</string>
    <string name="user_created_snackbar_text">%s успешно создан</string>

    <!--Manufacturer creation fragment strings-->
    <string name="manufacturer_name_hint">Название производителя</string>
    <string name="manufacturer_name_error">Введите название производителя</string>

    <string name="manufacturer_inn_hint">ИНН</string>
    <string name="manufacturer_inn_error">Введите ИНН</string>

    <string name="manufacturer_phone_hint">Телефон</string>
    <string name="manufacturer_phone_error">Введите телефон</string>

    <string name="manufacturer_address_hint">Адрес</string>
    <string name="manufacturer_address_error">Введите адрес</string>

    <string name="create_manufacturer_button">Создать производителя</string>
    <string name="manufacturer_created_snackbar_text">%s успешно создан</string>

    <!--Medicine creation fragment strings-->
    <string name="medicine_title_hint">Название</string>
    <string name="medicine_title_error">Введите название лекарства</string>

    <string name="medicine_description_hint">Описание</string>
    <string name="medicine_description_error">Введите описание лекарства</string>

    <string name="medicine_price_hint">Цена</string>
    <string name="medicine_price_error">Введите цену</string>

    <string name="medicine_creator_id_hint">ID производителя</string>
    <string name="medicine_creator_id_error">Введите ID производителя</string>

    <string name="medicine_type_hint">Тип</string>
    <string name="medicine_type_error">Введите тип лекарства</string>

    <string name="create_medicine_button">Создать лекарство</string>
    <string name="medicine_created_snackbar_text">Лекарство %s успешно создано</string>


    <!--Pharmacy creation fragment strings-->
    <string name="pharmacy_supervisor_hint">Управляющий</string>
    <string name="create_pharmacy_button">Создать аптеку</string>
    <string name="pharmacy_created_snackbar_text">Аптека %s успешно создана</string>

    <string name="pharmacy_name_error">Введите название аптеки</string>
    <string name="pharmacy_address_error">Введите адрес аптеки</string>
    <string name="pharmacy_phone_error">Введите телефон аптеки</string>
    <string name="pharmacy_supervisor_error">Введите ФИО управляющего</string>

    <!--Medicine request creation fragment strings-->
    <string name="medicine_request_id_hint">ID лекарства</string>
    <string name="medicine_request_id_error">Введите ID лекарства</string>
    <string name="medicine_request_quantity_hint">Количетсво</string>
    <string name="medicine_request_quantity_error">Введите количетсво</string>
    <string name="create_medicine_request">Создать заявку</string>
    <string name="request_succeed">Заявка была успешно создана</string>

    <string name="supply_positions_hint">Позиции</string>
    <string name="supply_positions_error">Введите позиции</string>
    <string name="supply_positions_helper">Укажите необходимые вещи, их количество, а также кабинет/помещение для доставки</string>
    <string name="supply_position_button">Создать заявку</string>
    <string name="supply_succeed">Завяка создана</string>

    <!--Sell rev strings-->
    <string name="sell_quantity">Количество:%d</string>
    <string name="sell_date">Дата продажи: %s</string>
    <string name="sell_production_date">Дата изготовления: %s</string>
    <string name="sell_invoice_id">ID накладной: %d</string>
    <string name="sell_shelf_life">Срок годности(мес): %d</string>
    <string name="pharm_sell_check_id">ID чека: %d</string>
    <string name="pharm_sell_client">Аптека клиент: %s</string>

    <array name="role_array">
        <item>DIRECTOR</item>
        <item>OPERATOR</item>
        <item>ACCOUNTANT</item>
        <item>SUPPLIER</item>
    </array>

    <array name="type_array">
        <item>FREE</item>
        <item>SPECIAL_STORAGE</item>
        <item>BY_RECEIPT</item>
    </array>

</resources>