<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_navigation"
    app:startDestination="@id/DirectoriesFragment">

    <fragment
        android:id="@+id/DirectoriesFragment"
        android:name="com.example.medmobile.ui.fragments.DirectoriesFragment"
        android:label="@string/main_menu_directories" >
        <action
            android:id="@+id/action_DirectoriesFragment_to_usersFragment"
            app:destination="@id/usersFragment"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_DirectoriesFragment_to_manufacturerFragment"
            app:destination="@id/manufacturerFragment" />
        <action
            android:id="@+id/action_DirectoriesFragment_to_medicineFragment"
            app:destination="@id/medicineFragment" />
        <action
            android:id="@+id/action_DirectoriesFragment_to_pharmacyFragment"
            app:destination="@id/pharmacyFragment" />
    </fragment>
    <fragment
        android:id="@+id/PurchaseFragment"
        android:name="com.example.medmobile.ui.fragments.PurchaseFragment"
        android:label="@string/main_menu_purchase" >
        <action
            android:id="@+id/action_PurchaseFragment_to_createMedicineRequestFragment"
            app:destination="@id/createMedicineRequestFragment" />
    </fragment>
    <fragment
        android:id="@+id/SalesToPharmacyFragment"
        android:name="com.example.medmobile.ui.fragments.SalesToPharmacyFragment"
        android:label="@string/main_menu_sales_to_pharmacy" >
        <action
            android:id="@+id/action_SalesToPharmacyFragment_to_createSellFragment"
            app:destination="@id/createSellFragment" />
    </fragment>
    <fragment
        android:id="@+id/SalesByPharmacyFragment"
        android:name="com.example.medmobile.ui.fragments.SalesByPharmacyFragment"
        android:label="@string/main_menu_sales_by_pharmacy" >
        <action
            android:id="@+id/action_SalesByPharmacyFragment_to_createPharmSellFragment"
            app:destination="@id/createPharmSellFragment" />
    </fragment>
    <fragment
        android:id="@+id/SupplyFragment"
        android:name="com.example.medmobile.ui.fragments.SupplyFragment"
        android:label="@string/main_menu_supply" >
        <action
            android:id="@+id/action_SupplyFragment_to_createSupplyFragment"
            app:destination="@id/createSupplyFragment" />
    </fragment>
    <fragment
        android:id="@+id/AccountingFragment"
        android:name="com.example.medmobile.ui.fragments.AccountingFragment"
        android:label="@string/main_menu_accounting" />
    <fragment
        android:id="@+id/usersFragment"
        android:name="com.example.medmobile.ui.fragments.UsersFragment"
        android:label="@string/users_label" >
        <action
            android:id="@+id/action_usersFragment_to_createUserFragment"
            app:destination="@id/createUserFragment" />
    </fragment>
    <fragment
        android:id="@+id/createUserFragment"
        android:name="com.example.medmobile.ui.fragments.CreateUserFragment"
        android:label="@string/create_user_label" />
    <fragment
        android:id="@+id/manufacturerFragment"
        android:name="com.example.medmobile.ui.fragments.ManufacturerFragment"
        android:label="@string/manufacturers_label" >
        <action
            android:id="@+id/action_manufacturerFragment_to_createManufacturerFragment"
            app:destination="@id/createManufacturerFragment" />
    </fragment>
    <fragment
        android:id="@+id/createManufacturerFragment"
        android:name="com.example.medmobile.ui.fragments.CreateManufacturerFragment"
        android:label="Создать производителя" />
    <fragment
        android:id="@+id/medicineFragment"
        android:name="com.example.medmobile.ui.fragments.MedicineFragment"
        android:label="Лекарства" >
        <action
            android:id="@+id/action_medicineFragment_to_createMedicineFragment"
            app:destination="@id/createMedicineFragment" />
    </fragment>
    <fragment
        android:id="@+id/createMedicineFragment"
        android:name="com.example.medmobile.ui.fragments.CreateMedicineFragment"
        android:label="Создать лекарство" />
    <fragment
        android:id="@+id/pharmacyFragment"
        android:name="com.example.medmobile.ui.fragments.PharmacyFragment"
        android:label="Аптеки" >
        <action
            android:id="@+id/action_pharmacyFragment_to_createPharmacyFragment"
            app:destination="@id/createPharmacyFragment" />
    </fragment>
    <fragment
        android:id="@+id/createPharmacyFragment"
        android:name="com.example.medmobile.ui.fragments.CreatePharmacyFragment"
        android:label="Создать аптеку" />
    <fragment
        android:id="@+id/createMedicineRequestFragment"
        android:name="com.example.medmobile.ui.fragments.CreateMedicineRequestFragment"
        android:label="Создать заявку" />
    <fragment
        android:id="@+id/createSupplyFragment"
        android:name="com.example.medmobile.ui.fragments.CreateSupplyFragment"
        android:label="Создать заявку на снабжение" />
    <fragment
        android:id="@+id/createSellFragment"
        android:name="com.example.medmobile.ui.fragments.CreateSellFragment"
        android:label="Создать покупку" />
    <fragment
        android:id="@+id/createPharmSellFragment"
        android:name="com.example.medmobile.ui.fragments.CreatePharmSellFragment"
        android:label="Создать покупку" />
</navigation>