<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/medium_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/remedy_producers_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/remedies_button"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/small_margin"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_height="wrap_content"
        android:text="@string/remedy_producers" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/remedies_button"
        app:layout_constraintTop_toBottomOf="@id/remedy_producers_button"
        app:layout_constraintBottom_toTopOf="@id/pharmacies_button"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/small_margin"
        android:layout_height="wrap_content"
        android:text="@string/remedies" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pharmacies_button"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/remedies_button"
        app:layout_constraintBottom_toTopOf="@id/users_button"
        android:layout_marginBottom="@dimen/small_margin"
        android:layout_height="wrap_content"
        android:text="@string/pharmacies" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/users_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/pharmacies_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/users" />
</androidx.constraintlayout.widget.ConstraintLayout>