<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/medium_margin">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_request_id"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_margin"
        android:hint="@string/medicine_request_id_hint"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/input_request_quantity"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_request_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="1234567890"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/text_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_request_quantity"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/medicine_request_quantity_hint"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/button_create_request"
        app:layout_constraintTop_toBottomOf="@id/input_request_id">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_request_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="1234567890"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/text_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_create_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_medicine_request"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_request_quantity" />

</androidx.constraintlayout.widget.ConstraintLayout>